fix(LinkBubble): Fix preview border overflowing link bubble

--- a/src/css/prosemirror.scss
+++ b/src/css/prosemirror.scss
@@ -397,5 +397,6 @@ div.ProseMirror {
 }
 
 .tippy-content div {
+	box-sizing: border-box;
 	visibility: visible !important;
 }
